# chip_8_emulator

./: .gitignore  .gitmodules  CMakeLists.txt  example.out  example.txt
src/: example.cpp
src/lib/: emulator.cpp  emulator.h
